workloads/ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
  namespace: ingress-controller
  annotations:
    metallb.universe.tf/address-pool: internal
spec:
  type: LoadBalancer
  #This will preserve the source IP for external traffic. However it means only nodes with an instance of ingress-nginx can receive traffic
#  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  selector:
    run: haproxy-ingress
