workloads/ingress-controller/svc-haproxy-stats.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: svc-haproxy-stats
  namespace: ingress-controller
spec:
  ports:
  - name: http
    port: 80
    targetPort: stat
    protocol: TCP

  selector:
    run: haproxy-ingress
